--- a/src/main/resources/templates/building/storage/storage.html
+++ b/src/main/resources/templates/building/storage/storage.html
@@ -68,7 +68,7 @@
 			exportUrl: prefix + "/export",
 			sortName: "createTime",
 			sortOrder: "desc",
-			modalName: "用户",
+			modalName: "入库",
 			search: false,
 			showExport: false,
 			columns: [{
