--- a/src/main/resources/templates/building/taskManager/taskManager.html
+++ b/src/main/resources/templates/building/taskManager/taskManager.html
@@ -65,7 +65,7 @@
 			exportUrl: prefix + "/export",
 			sortName: "createTime",
 			sortOrder: "desc",
-			modalName: "用户",
+			modalName: "任务",
 			search: false,
 			showExport: false,
 			columns: [{
