--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,7 @@
                     </div>
                     <div class="m-b"></div>
                     <h4>欢迎使用 <strong>后台管理系统</strong></h4>
+                    <strong>还没有账号？ <a href="/registry">立即注册&raquo;</a></strong>
                 </div>
             </div>
             <div class="col-sm-5">
@@ -58,7 +59,7 @@
         </div>
         <div class="signup-footer">
             <div class="pull-left">
-                &copy; 2018 All Rights Reserved. Jiang XiaoJie
+                &copy; 2018 All Rights Reserved.
             </div>
         </div>
     </div>
