--- a/src/main/resources/templates/building/qualityInspect/add.html
+++ b/src/main/resources/templates/building/qualityInspect/add.html
@@ -6,6 +6,7 @@
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-menu-add">
+			<input name="productResult" type="hidden" value="0" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目名称：</label>
 				<div class="col-sm-8">
@@ -35,12 +36,6 @@
 				<label class="col-sm-3 control-label">项目编号：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" name="productId">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">检查结果：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productResult">
 				</div>
 			</div>
 			<div class="form-group">
