--- a/src/main/resources/templates/building/qualityInspect/edit.html
+++ b/src/main/resources/templates/building/qualityInspect/edit.html
@@ -7,6 +7,7 @@
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-menu-add" th:object="${qualityInspect}">
 			<input name="id" type="hidden" th:field="*{id}" />
+			<input name="productResult" type="hidden" th:field="*{productResult}" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目名称：</label>
 				<div class="col-sm-8">
@@ -36,12 +37,6 @@
 				<label class="col-sm-3 control-label">项目编号：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" name="productId" th:field="*{productId}">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">检查结果：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productResult" th:field="*{productResult}">
 				</div>
 			</div>
 			<div class="form-group">
