--- a/src/main/resources/templates/building/qualityRectification/qualityRectification.html
+++ b/src/main/resources/templates/building/qualityRectification/qualityRectification.html
@@ -18,10 +18,7 @@
 				<div class="select-list gd">
 					<ul>
 						<li>
-							项目名：<input type="text" name="productName"/>
-						</li>
-						<li>
-							项目编号：<input type="text" name="productNumber"/>
+							项目名称：<input type="text" name="productName"/>
 						</li>
 						<li>
 							<a class="btn btn-primary btn-rounded btn-sm"
@@ -33,12 +30,10 @@
 		</div>
 
 		<div class="btn-group hidden-xs" id="toolbar" role="group">
-			<a class="btn btn-outline btn-success btn-rounded" onclick="$.operate.add()"
-			   shiro:hasPermission="building:product:add">
+			<a class="btn btn-outline btn-success btn-rounded" onclick="$.operate.add()">
 				<i class="fa fa-plus"></i> 新增
 			</a>
-			<a class="btn btn-outline btn-danger btn-rounded" onclick="$.operate.batRemove()"
-			   shiro:hasPermission="building:product:remove">
+			<a class="btn btn-outline btn-danger btn-rounded" onclick="$.operate.batRemove()">
 				<i class="fa fa-trash-o"></i> 删除
 			</a>
 		</div>
@@ -52,9 +47,7 @@
 <script th:src="@{/ajax/libs/jquery-layout/jquery.layout-latest.js}"></script>
 <script th:src="@{/ajax/libs/jquery-ztree/3.5/js/jquery.ztree.all-3.5.js}"></script>
 <script th:inline="javascript">
-	var editFlag = [[${@permissionService.hasPermi('building:product:edit')}]];
-	var removeFlag = [[${@permissionService.hasPermi('building:product:remove')}]];
-	var prefix = ctx + "building/product"
+	var prefix = ctx + "building/qualityInspect"
 
 	$(document).ready(function () {
 		$('body').layout({west__size: 185});
@@ -63,14 +56,14 @@
 
 	function queryUserList() {
 		var options = {
-			url: prefix + "/list",
+			url: prefix + "/notList",
 			createUrl: prefix + "/add",
 			updateUrl: prefix + "/edit/{id}",
 			removeUrl: prefix + "/remove",
 			exportUrl: prefix + "/export",
 			sortName: "createTime",
 			sortOrder: "desc",
-			modalName: "项目",
+			modalName: "用户",
 			search: false,
 			showExport: false,
 			columns: [{
@@ -85,39 +78,51 @@
 					title: '项目名称',
 				},
 				{
-					field: 'productAbbreviation',
-					title: '项目简称'
+					field: 'inspectType',
+					title: '检查性质'
 				},
 				{
-					field: 'productNumber',
-					title: '施工合同编号'
+					field: 'inspectName',
+					title: '检查人'
 				},
 				{
-					field: 'productType',
-					title: '项目性质'
+					field: 'inspectDate',
+					title: '检查日期'
 				},
 				{
-					field: 'productStatus',
-					title: '项目状态'
+					field: 'productId',
+					title: '项目编号'
 				},
 				{
-					field: 'createTime',
-					title: '创建时间'
-				},
-				{
-					title: '操作',
-					align: 'center',
+					title: '状态',
+					align: 'productResult',
 					formatter: function (value, row, index) {
 						var actions = [];
-						actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
-						actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
+						actions.push('<a class="btn btn-success btn-xs " href="#" onclick="updateStatus(' + row.id + ', 3)""><i class="fa fa-edit"></i>合格</a> ');
 						return actions.join('');
 					}
 				}]
 		};
 		$.table.init(options);
 	}
-
+	function updateStatus(id, status) {
+		$.ajax({
+			type : "POST",
+			url : ctx + "building/qualityInspect/updateStatus",
+			data : {
+				"id": id,
+				"status": status
+			},
+			async : false,
+			error : function() {
+				alert("系统错误");
+			},
+			success : function() {
+				alert("修改成功")
+				window.location.href=ctx + 'building/qualityRectification';
+			}
+		})
+	}
 </script>
 </body>
 </html>
