--- a/src/main/resources/templates/building/security/add.html
+++ b/src/main/resources/templates/building/security/add.html
@@ -6,6 +6,7 @@
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-menu-add">
+			<input name="rectificationStatus" type="hidden" value="0" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目编号：</label>
 				<div class="col-sm-8">
@@ -16,7 +17,7 @@
 				<label class="col-sm-3 control-label">计划开始日期：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" value="2018-04-20" ame="beginDate">
+					<input type="text" class="form-control" value="2018-04-20" name="beginDate">
 				</div>
 
 			</div>
@@ -24,7 +25,7 @@
 				<label class="col-sm-3 control-label">计划结束日期：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" value="2019-04-20" name="workTime" >
+					<input type="text" class="form-control" value="2019-04-20" name="endDate" >
 				</div>
 			</div>
 			<div class="form-group">
@@ -53,12 +54,6 @@
 				<label class="col-sm-3 control-label">检查性质：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" name="securityType" id="securityType">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">检查结果：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="rectificationStatus" id="rectificationStatus">
 				</div>
 			</div>
 			<div class="form-group">
