--- a/src/main/resources/templates/building/security/edit.html
+++ b/src/main/resources/templates/building/security/edit.html
@@ -7,6 +7,7 @@
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-menu-add" th:object="${productSecurity}">
 			<input name="id" type="hidden" th:field="*{id}" />
+			<input name="rectificationStatus" type="hidden" th:field="*{rectificationStatus}" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目编号：</label>
 				<div class="col-sm-8">
@@ -25,7 +26,7 @@
 				<label class="col-sm-3 control-label">计划结束日期：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" value="2019-04-20" name="workTime" >
+					<input type="text" class="form-control" value="2019-04-20" name="endDate" >
 				</div>
 
 			</div>
@@ -55,12 +56,6 @@
 				<label class="col-sm-3 control-label">检查性质：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" name="securityType" id="securityType" th:field="*{securityType}">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">检查结果：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="rectificationStatus" id="rectificationStatus" th:field="*{rectificationStatus}">
 				</div>
 			</div>
 			<div class="form-group">
