--- a/src/main/resources/templates/building/storage/add.html
+++ b/src/main/resources/templates/building/storage/add.html
@@ -28,9 +28,8 @@
 				<label class="col-sm-3 control-label">入库日期：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" value="2018-04-20" >
+					<input type="text" class="form-control"  id="storageDate" name="storageDate"  value="2018-04-20" >
 				</div>
-				<input type="hidden" id="storageDate" name="storageDate" value="" /><br/>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">数量：</label>
