--- a/src/main/resources/templates/building/workLog/workLog.html
+++ b/src/main/resources/templates/building/workLog/workLog.html
@@ -65,7 +65,7 @@
             removeUrl: prefix + "/remove",
             exportUrl: prefix + "/export",
             sortOrder: "desc",
-            modalName: "用户",
+            modalName: "施工日志",
             search: false,
             showExport: false,
             columns: [{
