--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
                         <!--<h1><img "></h1>-->
                     </div>
                     <div class="m-b"></div>
-                    <h4>欢迎使用 <strong>后台管理系统</strong></h4>
+                    <h4>欢迎使用 <strong>农村自建房管理系统</strong></h4>
                     <strong>还没有账号？ <a href="/registry">立即注册&raquo;</a></strong>
                 </div>
             </div>
@@ -40,8 +40,8 @@
                 <form id="signupForm">
                     <h4 class="no-margins">登录：</h4>
                     <p class="m-t-md"></p>
-                    <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value="admin"    />
-                    <input type="password" name="password" class="form-control pword m-b" placeholder="密码"   value="admin123" />
+                    <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value=""    />
+                    <input type="password" name="password" class="form-control pword m-b" placeholder="密码"   value="" />
 					<div class="row" th:if="${captchaEbabled==true}">
 						<div class="col-xs-6">
 						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5">
