--- a/src/main/resources/templates/system/user/edit.html
+++ b/src/main/resources/templates/system/user/edit.html
@@ -6,18 +6,14 @@
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-user-edit" th:object="${user}">
-			<input name="userId"  type="hidden"  th:field="*{id}" />
+			<input name="id"  type="hidden"  th:field="*{id}" />
 			<input name="deptId"  type="hidden"  th:field="*{deptId}" id="treeId"/>
+			<input type="hidden" name="deptName" onclick="selectDeptTree()" readonly="true" id="treeName" th:field="*{dept.deptName}">
+
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">登录名称：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" readonly="true" th:field="*{loginName}"/>
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">部门名称：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="deptName" onclick="selectDeptTree()" readonly="true" id="treeName" th:field="*{dept.deptName}">
 				</div>
 			</div>
 			<div class="form-group">
@@ -105,7 +101,7 @@
                         dataType: "json",
                         data: {
                         	"id": function() {
-                                return $("input[name='userId']").val();
+                                return $("input[name='id']").val();
                             },
                 			"email": function() {
                                 return $("input[name='email']").val();
@@ -126,7 +122,7 @@
                         dataType: "json",
                         data: {
                         	"id": function() {
-                                return $("input[name='userId']").val();
+                                return $("input[name='id']").val();
                             },
                 			"phoneNumber": function() {
                                 return $("input[name='phoneNumber']").val();
