--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -17,6 +17,11 @@
     <meta http-equiv="refresh" content="0;ie.html" />
     <![endif]-->
     <link rel="shortcut icon" href="../static/favicon.ico" th:href="@{favicon.ico}"/>
+    <style type="text/css">
+        label.error {
+            position: relative;
+        }
+    </style>
     <script>
         if(window.top!==window.self){window.top.location=window.location};
     </script>
