--- a/src/main/resources/templates/building/qualityInspect/add.html
+++ b/src/main/resources/templates/building/qualityInspect/add.html
@@ -10,7 +10,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productName" name="productName"/>
+					<input class="form-control" type="text"  id="productName" name="productName" onclick="selectDeptTree()" readonly="true" />
 				</div>
 			</div>
 			<div class="form-group">
@@ -35,7 +35,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">项目编号：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productId">
+					<input class="form-control" type="text" name="productId" onclick="selectDeptTree()" readonly="true"  id="productId">
 				</div>
 			</div>
 			<div class="form-group">
@@ -63,6 +63,11 @@
         	}
         });
 
+        /*项目*/
+        function selectDeptTree() {
+            var url = ctx + "building/product/productTree";
+            $.modal.open("选择项目", url, '380', '380');
+        }
     </script>
 </body>
 </html>
