--- a/src/main/resources/templates/building/taskManager/edit.html
+++ b/src/main/resources/templates/building/taskManager/edit.html
@@ -10,13 +10,13 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productName" name="productName" th:field="*{productName}"/>
+					<input class="form-control" type="text"  id="productName" name="productName" th:field="*{productName}" onclick="selectDeptTree()"/>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label"><span style="color:red;">*</span>项目编号：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productId" name="productId" th:field="*{productId}"/>
+					<input class="form-control" type="text"  id="productId" name="productId" th:field="*{productId}" onclick="selectDeptTree()"/>
 				</div>
 			</div>
 			<div class="form-group">
@@ -75,7 +75,11 @@
         		$.operate.save(prefix + "/save", $('#form-menu-add').serialize());
         	}
         });
-
+        /*项目*/
+        function selectDeptTree() {
+            var url = ctx + "building/product/productTree";
+            $.modal.open("选择项目", url, '380', '380');
+        }
     </script>
 </body>
 </html>
