--- a/src/main/resources/templates/building/teamManager/add.html
+++ b/src/main/resources/templates/building/teamManager/add.html
@@ -33,7 +33,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">项目id：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productId">
+					<input class="form-control" type="text" name="productId" onclick="selectDeptTree()" readonly="true" >
 				</div>
 			</div>
 			<div class="form-group">
@@ -60,7 +60,11 @@
         		$.operate.save(prefix + "/save", $('#form-menu-add').serialize());
         	}
         });
-
+        /*项目*/
+        function selectDeptTree() {
+            var url = ctx + "building/product/productTree";
+            $.modal.open("选择项目", url, '380', '380');
+        }
     </script>
 </body>
 </html>
