--- a/src/main/resources/templates/building/teamManager/edit.html
+++ b/src/main/resources/templates/building/teamManager/edit.html
@@ -35,7 +35,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">项目id：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productId" th:field="*{productId}">
+					<input class="form-control" type="text" name="productId" th:field="*{productId}" onclick="selectDeptTree()" readonly="true">
 				</div>
 			</div>
 			<div class="form-group">
@@ -63,6 +63,11 @@
         	}
         });
 
+        /*项目*/
+        function selectDeptTree() {
+            var url = ctx + "building/product/productTree";
+            $.modal.open("选择项目", url, '380', '380');
+        }
     </script>
 </body>
 </html>
