--- a/src/main/resources/templates/building/workLog/add.html
+++ b/src/main/resources/templates/building/workLog/add.html
@@ -9,7 +9,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label "> 项目名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="workRecord" name="workRecord"/>
+					<input class="form-control" type="text"  id="workRecord" name="workRecord" onclick="selectDeptTree()" readonly="true"/>
 				</div>
 			</div>
 			<div class="form-group">
@@ -72,6 +72,7 @@
         		$.operate.save(prefix + "/save", $('#form-menu-add').serialize());
         	}
         });
+
 
     </script>
 </body>
