--- a/src/main/resources/templates/system/user/edit.html
+++ b/src/main/resources/templates/system/user/edit.html
@@ -4,191 +4,195 @@
 <head th:include="include :: header"></head>
 <link href="/ajax/libs/iCheck/custom.css" th:href="@{/ajax/libs/iCheck/custom.css}" rel="stylesheet"/>
 <body class="white-bg">
-	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
-		<form class="form-horizontal m" id="form-user-edit" th:object="${user}">
-			<input name="id"  type="hidden"  th:field="*{id}" />
-			<input name="deptId"  type="hidden"  th:field="*{deptId}" id="treeId"/>
-			<input type="hidden" name="deptName" onclick="selectDeptTree()" readonly="true" id="treeName" th:field="*{dept.deptName}">
-
-			<div class="form-group">
-				<label class="col-sm-3 control-label ">登录名称：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" readonly="true" th:field="*{loginName}"/>
-				</div>
+<div class="wrapper wrapper-content animated fadeInRight ibox-content">
+	<form class="form-horizontal m" id="form-user-edit" th:object="${user}">
+		<input name="userId"  type="hidden"  th:field="*{id}" />
+		<input name="deptId"  type="hidden"  th:field="*{deptId}" id="treeId"/>
+		<div class="form-group">
+			<label class="col-sm-3 control-label ">登录名称：</label>
+			<div class="col-sm-8">
+				<input class="form-control" type="text" readonly="true" th:field="*{loginName}"/>
 			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">用户名称：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="userName" id="userName" th:field="*{userName}">
-				</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">部门名称：</label>
+			<div class="col-sm-8">
+				<input class="form-control" type="text" name="deptName" onclick="selectDeptTree()" readonly="true" id="treeName" th:field="*{dept.deptName}">
 			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">邮箱：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="email" id="email" th:field="*{email}">
-				</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">用户名称：</label>
+			<div class="col-sm-8">
+				<input class="form-control" type="text" name="userName" id="userName" th:field="*{userName}">
 			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">手机：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phoneNumber" id="phoneNumber" th:field="*{phoneNumber}">
-				</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">邮箱：</label>
+			<div class="col-sm-8">
+				<input class="form-control" type="text" name="email" id="email" th:field="*{email}">
 			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">性别：</label>
-				<div class="col-sm-8">
-					<select id="sex" class="form-control m-b" th:with="type=${@dictService.selectDictData('sys_user_sex')}">
-	                    <option th:each="dict : ${type}" th:text="${dict['dictLabel']}" th:value="${dict['dictValue']}" th:field="*{sex}"></option>
-	                </select>
-				</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">手机：</label>
+			<div class="col-sm-8">
+				<input class="form-control" type="text" name="phoneNumber" id="phoneNumber" th:field="*{phoneNumber}">
 			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">状态：</label>
-				<div class="col-sm-8">
-					<div class="onoffswitch">
-                         <input type="checkbox" th:checked="${user.status == '0' ? true : false}" class="onoffswitch-checkbox" id="status" name="status">
-                         <label class="onoffswitch-label" for="status">
-                             <span class="onoffswitch-inner"></span>
-                             <span class="onoffswitch-switch"></span>
-                         </label>
-                     </div>
-				</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">性别：</label>
+			<div class="col-sm-8">
+				<select id="sex" class="form-control m-b" th:with="type=${@dictService.selectDictData('sys_user_sex')}">
+					<option th:each="dict : ${type}" th:text="${dict['dictLabel']}" th:value="${dict['dictValue']}" th:field="*{sex}"></option>
+				</select>
 			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">岗位：</label>
-				<div class="col-sm-8">
-					<select id="post" name="post" class="form-control select2-hidden-accessible" multiple="">
-						<option th:each="post:${posts}" th:value="${post.id}" th:text="${post.postName}" th:selected="${post.flag}"></option>
-					</select>
-					
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">角色：</label>
-				<div class="col-sm-8">
-					<label th:each="role:${roles}" class="checkbox-inline i-checks">
-						<input name="role" type="checkbox" th:value="${role.id}" th:text="${role.roleName}" th:checked="${role.flag}">
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">状态：</label>
+			<div class="col-sm-8">
+				<div class="onoffswitch">
+					<input type="checkbox" th:checked="${user.status == '0' ? true : false}" class="onoffswitch-checkbox" id="status" name="status">
+					<label class="onoffswitch-label" for="status">
+						<span class="onoffswitch-inner"></span>
+						<span class="onoffswitch-switch"></span>
 					</label>
 				</div>
 			</div>
-			
-			<div class="form-group">
-				<div class="form-control-static col-sm-offset-9">
-					<button type="submit" class="btn btn-primary">提交</button>
-					<button onclick="$.modal.close()" class="btn btn-danger" type="button">关闭</button>
-				</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">岗位：</label>
+			<div class="col-sm-8">
+				<select id="post" name="post" class="form-control select2-hidden-accessible" multiple="">
+					<option th:each="post:${posts}" th:value="${post.id}" th:text="${post.postName}" th:selected="${post.flag}"></option>
+				</select>
+
 			</div>
-		</form>
-	</div>
-	<div th:include="include::footer"></div>
-	<script th:src="@{/ajax/libs/iCheck/icheck.min.js}"></script>
-	<script th:src="@{/ajax/libs/select/select2.js}"></script>
-	<script>
-        $("#form-user-edit").validate({
-        	rules:{
-        		userName:{
-        			required:true,
-        		},
-        		deptName:{
-        			required:true,
-        		},
-        		email:{
-        			required:true,
-                    email:true,
-                    remote: {
-                        url: ctx + "system/user/checkEmailUnique",
-                        type: "post",
-                        dataType: "json",
-                        data: {
-                        	"id": function() {
-                                return $("input[name='id']").val();
-                            },
-                			"email": function() {
-                                return $("input[name='email']").val();
-                            }
-                        },
-                        dataFilter: function (data, type) {
-                            if (data == "0") return true;
-                            else return false;
-                        }
-                    }
-        		},
-        		phoneNumber:{
-        			required:true,
-        			isPhone:true,
-                    remote: {
-                        url: ctx + "system/user/checkPhoneUnique",
-                        type: "post",
-                        dataType: "json",
-                        data: {
-                        	"id": function() {
-                                return $("input[name='id']").val();
-                            },
-                			"phoneNumber": function() {
-                                return $("input[name='phoneNumber']").val();
-                            }
-                        },
-                        dataFilter: function (data, type) {
-                            if (data == "0") return true;
-                            else return false;
-                        }
-                    }
-        		},
-        	},
-        	messages: {
-        		"email": {
-                    remote: "Email已经存在"
-                },
-        		"phoneNumber":{
-                	remote: "手机号码已经存在"
-        		}
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">角色：</label>
+			<div class="col-sm-8">
+				<label th:each="role:${roles}" class="checkbox-inline i-checks">
+					<input name="role" type="checkbox" th:value="${role.id}" th:text="${role.roleName}" th:checked="${role.flag}">
+				</label>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="form-control-static col-sm-offset-9">
+				<button type="submit" class="btn btn-primary">提交</button>
+				<button onclick="$.modal.close()" class="btn btn-danger" type="button">关闭</button>
+			</div>
+		</div>
+	</form>
+</div>
+<div th:include="include::footer"></div>
+<script th:src="@{/ajax/libs/iCheck/icheck.min.js}"></script>
+<script th:src="@{/ajax/libs/select/select2.js}"></script>
+<script>
+    $("#form-user-edit").validate({
+        rules:{
+            userName:{
+                required:true,
             },
-        	submitHandler:function(form){
-        		edit();
-        	}
+            deptName:{
+                required:true,
+            },
+            email:{
+                required:true,
+                email:true,
+                remote: {
+                    url: ctx + "system/user/checkEmailUnique",
+                    type: "post",
+                    dataType: "json",
+                    data: {
+                        "id": function() {
+                            return $("input[name='id']").val();
+                        },
+                        "email": function() {
+                            return $("input[name='email']").val();
+                        }
+                    },
+                    dataFilter: function (data, type) {
+                        if (data == "0") return true;
+                        else return false;
+                    }
+                }
+            },
+            phoneNumber:{
+                required:true,
+                isPhone:true,
+                remote: {
+                    url: ctx + "system/user/checkPhoneUnique",
+                    type: "post",
+                    dataType: "json",
+                    data: {
+                        "id": function() {
+                            return $("input[name='id']").val();
+                        },
+                        "phoneNumber": function() {
+                            return $("input[name='phoneNumber']").val();
+                        }
+                    },
+                    dataFilter: function (data, type) {
+                        if (data == "0") return true;
+                        else return false;
+                    }
+                }
+            },
+        },
+        messages: {
+            "email": {
+                remote: "Email已经存在"
+            },
+            "phoneNumber":{
+                remote: "手机号码已经存在"
+            }
+        },
+        submitHandler:function(form){
+            edit();
+        }
+    });
+
+    function edit() {
+        var userId = $("input[name='id']").val();
+        var deptId = $("input[name='deptId']").val();
+        var userName = $("input[name='userName']").val();
+        var email = $("input[name='email']").val();
+        var phoneNumber = $("input[name='phoneNumber']").val();
+        var sex = $("#sex option:selected").val();
+        var status = $("input[name='status']").is(':checked') == true ? 0 : 1;
+        var roleIds = $.form.selectCheckeds("role");
+        var postIds = $.form.selectSelects("post");
+        $.ajax({
+            cache : true,
+            type : "POST",
+            url : ctx + "system/user/save",
+            data : {
+                "id": userId,
+                "deptId": deptId,
+                "userName": userName,
+                "email": email,
+                "phoneNumber": phoneNumber,
+                "sex": sex,
+                "status": status,
+                "roleIds": roleIds,
+                "postIds": postIds
+            },
+            async : false,
+            error : function(request) {
+                $.modal.alertError("系统错误");
+            },
+            success : function(data) {
+                $.operate.saveSuccess(data);
+            }
         });
+    }
 
-        function edit() {
-        	var userId = $("input[name='id']").val();
-        	var deptId = $("input[name='deptId']").val();
-        	var userName = $("input[name='userName']").val();
-        	var email = $("input[name='email']").val();
-        	var phoneNumber = $("input[name='phoneNumber']").val();
-        	var sex = $("#sex option:selected").val();
-        	var status = $("input[name='status']").is(':checked') == true ? 0 : 1;
-        	var roleIds = $.form.selectCheckeds("role");
-        	var postIds = $.form.selectSelects("post");
-        	$.ajax({
-        		cache : true,
-        		type : "POST",
-        		url : ctx + "system/user/save",
-        		data : {
-        			"id": userId,
-        			"deptId": deptId,
-        			"userName": userName,
-        			"email": email,
-        			"phoneNumber": phoneNumber,
-        			"sex": sex,
-        			"status": status,
-        			"roleIds": roleIds,
-        			"postIds": postIds
-        		},
-        		async : false,
-        		error : function(request) {
-        			$.modal.alertError("系统错误");
-        		},
-        		success : function(data) {
-        			$.operate.saveSuccess(data);
-        		}
-        	});
-        }
-
-        /*用户管理-修改-选择部门树*/
-        function selectDeptTree() {
-        	var deptId = $("#treeId").val();
-            var url = ctx + "system/dept/selectDeptTree/" + deptId;
-            $.modal.open("选择部门", url, '380', '380');
-        }
-    </script>
+    /*用户管理-修改-选择部门树*/
+    function selectDeptTree() {
+        var deptId = $("#treeId").val();
+        var url = ctx + "system/dept/selectDeptTree/" + deptId;
+        $.modal.open("选择部门", url, '380', '380');
+    }
+</script>
 </body>
 </html>
